namespace Interface
{
    public interface IState
    {
        public void Enter();
        public void Stay();
        public void Exit();
    }
}
